# persistent

./: .gitignore  persistent.cabal  runtests.hs
Database/Persist/: Base.hs  GenericSql.hs
backends/mongoDB/: \  persistent-mongoDB.cabal  test1.hs  testdb.hi  testdb.hs
backends/mongoDB/Database/Persist/: MongoDB.hi  MongoDB.hs
backends/mongoDB/testsuite/tests/: runtests.hi  runtests.hs  testdb.hs
backends/postgresql/: persistent-postgresql.cabal
backends/sqlite/: persistent-sqlite.cabal
tests/: runtests.hs
