name:            persistent
version:         0.3.1.3
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Type-safe, non-relational, multi-backend persistence.
description:     This library provides just the general interface and helper functions. You must use a specific backend in order to make this useful.
category:        Database, Yesod
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://docs.yesodweb.com/persistent/

library
    build-depends:   base >= 4 && < 5,
                     template-haskell >= 2.4 && < 2.6,
                     bytestring >= 0.9.1 && < 0.10,
                     transformers >= 0.2.1 && < 0.3,
                     time >= 1.1.4 && < 1.3,
                     text >= 0.7.1 && < 0.12,
                     hamlet >= 0.5 && < 0.7,
                     web-routes-quasi >= 0.6.0 && < 0.7,
                     containers >= 0.2 && < 0.5,
                     parsec >= 2.1 && < 4,
                     enumerator >= 0.4 && < 0.5,
                     stm >= 2.1 && < 2.3,
                     neither >= 0.1 && < 0.2
    exposed-modules: Database.Persist
                     Database.Persist.Base
                     Database.Persist.TH
                     Database.Persist.Quasi
                     Database.Persist.GenericSql
                     Database.Persist.GenericSql.Internal
                     Database.Persist.GenericSql.Raw
                     Database.Persist.Pool
    ghc-options:     -Wall

Flag test
    Description:   Build the runtests executables.
    Default:       False

executable         runtests
    if flag(test)
        Buildable: True
    else
        Buildable: True
    hs-source-dirs: ., backends/sqlite, backends/postgresql, backends/mongoDB
    main-is:       runtests.hs
    ghc-options:   -Wall
    build-depends:   haskell98,
                     HUnit,
                     test-framework,
                     test-framework-hunit,
                     base >= 4 && < 5,
                     template-haskell >= 2.4 && < 2.6,
                     bytestring >= 0.9.1 && < 0.10,
                     transformers >= 0.2.1 && < 0.3,
                     time >= 1.1.4 && < 1.3,
                     text >= 0.7.1 && < 0.12,
                     hamlet >= 0.5 && < 0.7,
                     web-routes-quasi >= 0.6.0 && < 0.7,
                     containers >= 0.2 && < 0.5,
                     parsec >= 2.1 && < 4,
                     enumerator >= 0.4 && < 0.5,
                     stm >= 2.1 && < 2.3,
                     neither >= 0.1 && < 0.2,
                     HDBC-postgresql,
                     HDBC,

                     mongoDB >= 0.8.1 && < 0.9,
                     network >= 2.2.1.7 && <= 2.3,
                     bson >= 0.0.4 && < 0.1,
                     compact-string-fix >= 0.3.1 && < 0.4,
                     utf8-string >= 0.3.4 && < 0.4
    extra-libraries: sqlite3

source-repository head
  type:     git
  location: git://github.com/snoyberg/persistent.git
