name:            persistent-mongoDB
version:         0.1.0
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Backend for the persistent library using mongoDB.
category:        Database
stability:       Experimental
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://docs.yesodweb.com/persistent/

library
    build-depends:   base >= 4 && < 5,
                     bytestring >= 0.9.1 && < 0.10,
                     transformers >= 0.2.1 && < 0.3,
                     MonadCatchIO-transformers >= 0.2.2 && < 0.3,
                     utf8-string >= 0.3.4 && < 0.4,
                     persistent >= 0.1.0 && < 0.2,
                     mtl >= 1.1.0.2 && < 1.2,
                     mongoDB >= 0.7.1 && < 0.8,
                     bson >= 0.0.3
    exposed-modules: Database.Persist.MongoDB
    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/snoyberg/persistent.git
