name:            persistent-mongoDB
version:         0.2.2
license:         BSD3
license-file:    LICENSE
author:          Greg Weber <greg@gregweber.info>
maintainer:      Greg Weber <greg@gregweber.info>
synopsis:        Backend for the persistent library using mongoDB.
category:        Database
stability:       Experimental
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://docs.yesodweb.com/persistent/

library
    build-depends:   base >= 4 && < 5,
                     persistent >= 0.3.1.3,
                     neither >= 0.1 && <= 0.2,
                     template-haskell >= 2.4 && < 2.6,
                     transformers >= 0.2.1 && < 0.3,
                     containers >= 0.2 && < 0.5,
                     bytestring >= 0.9 && < 0.10,
                     enumerator >= 0.4 && < 0.5,
                     mongoDB >= 0.8.1 && < 0.9,
                     network >= 2.2.1.7 && <= 2.3,
                     bson >= 0.0.4 && < 0.1,
                     compact-string-fix >= 0.3.1 && < 0.4,
                     utf8-string >= 0.3.4 && < 0.4

    exposed-modules: Database.Persist.MongoDB
    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/snoyberg/persistent.git
